tests/paczka1/small_fuzzy/89993590.err
Error in line 1: S5 S462 38,0
Error in line 3: S5 S462 190,0
Error in line 6: S5 S462 99,9
Error in line 5: jJH S5 93,7
Error in line 9: S5 S462 444,6
